# QtAV

./: .gitattributes  .gitignore  .gitmodules  .qmake.conf  .travis.yml  CMakeLists.txt  CNAME  Changelog  QtAV.pro  README.md  TODO.txt  appveyor.yml  common.pri  configure.prf  configure.pri  deploy.pri  index.html  pack.pri  params.json  root.pri  runSdkInstall.pri
examples/: CMakeLists.txt  examples.pro
examples/QMLPlayer/: ControlPanel.qml  QMLPlayer.desktop  QMLPlayer.pro  QMLPlayer_harmattan.desktop  QMLPlayer_sdk.pro  WinPhone8.Package.appxmanifest  WinRT8.Package.appxmanifest  main.cpp  qmlplayer.qrc  qtmain_winrt.cpp  qtmain_winrt_56.cpp
examples/audiopipeline/: audiopipeline.pro  main.cpp  src.pri
examples/common/: Config.cpp  Config.h  Info.plist  ScreenSaver.cpp  ScreenSaver.h  common.cpp  common.h  common.pro  common_export.h  libcommon.pri  qoptions.cpp  qoptions.h
examples/filters/: SimpleFilter.cpp  SimpleFilter.h  filters.pro  main.cpp  res.qrc
examples/framereader/: framereader.pro  main.cpp
examples/glslfilter/: main.cpp
examples/player/: Button.cpp  Button.h  ClickableMenu.cpp  ClickableMenu.h  EventFilter.cpp  EventFilter.h  MainWindow.cpp  MainWindow.h  Preview.cpp  Preview.h  ScreenSaver.cpp  ScreenSaver.h  Slider.cpp  Slider.h  StatisticsView.cpp  StatisticsView.h  TVView.cpp  TVView.h  main.cpp  player.pro  player_sdk.pro  src.pri  theme.qrc
examples/player-d2d/: main.cpp  player-d2d.pro
examples/player-gdi/: main.cpp  player-gdi.pro
examples/player-gl/: main.cpp
examples/playerGL/: main.cpp  playerGL.pro
examples/qml/: filter.qml  glslfilter.qml  simple.qml
examples/qmlmultiwindow/: main.cpp  main.qml  qmlmultiwindow.pro
examples/qmlvideofx/: filereader.cpp  filereader.h  main.cpp  qmlvideofx.pro  qmlvideofx.qrc  trace.h
examples/qmlvumeter/: VUMeterFilter.cpp  VUMeterFilter.h  main.cpp  main.qml  qmlvumeter.pro
examples/shader/: main.cpp  shader.pro
examples/sharedoutput/: sharedoutput.pro  widget.cpp  widget.h
examples/simpleplayer/: Button.cpp  Button.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Slider.cpp  Slider.h  main.cpp  playerwindow.cpp  playerwindow.h  simpleplayer.pro  simpleplayer_sdk.pro  src.pri  theme.qrc
examples/simpletranscode/: main.cpp  simpletranscode.pro
examples/videocapture/: main.cpp  playerwindow.cpp  playerwindow.h  videocapture.pro
examples/videographicsitem/: main.cpp  videographicsitem.pro  videoplayer.cpp  videoplayer.h
examples/videogroup/: main.cpp  videogroup.cpp  videogroup.h  videogroup.pro
examples/videowall/: VideoWall.cpp  VideoWall.h  main.cpp  videowall.pro
examples/vo-d2d/: main.cpp
examples/vo-gl/: vo-gl.pro
examples/vo-qt/: main.cpp  vo-qt.pro
examples/window/: main.cpp  window.pro
python/: configure.py  pyproject.toml
python/examples/: simpleplayer.py
qml/: CMakeLists.txt  MediaMetaData.cpp  QQuickItemRenderer.cpp  QmlAVPlayer.cpp  QuickFBORenderer.cpp  QuickFilter.cpp  QuickSubtitle.cpp  QuickSubtitleItem.cpp  QuickVideoPreview.cpp  SGVideoNode.cpp  Video.qml  libQmlAV.pri  libQmlAV.pro  libQmlAV.qrc  plugin.cpp  plugins.qmltypes  qmldir
qml/QmlAV/: Export.h  MediaMetaData.h  QQuickItemRenderer.h  QmlAVPlayer.h  QuickFBORenderer.h  QuickFilter.h  QuickSubtitle.h  QuickSubtitleItem.h  QuickVideoPreview.h  SGVideoNode.h
src/: AOOpenAL.cpp  AOPortAudio.cpp  AVClock.cpp  AVCompat.cpp  AVDecoder.cpp  AVDemuxThread.cpp  AVDemuxThread.h  AVDemuxer.cpp  AVError.cpp  AVInfo.cpp  AVMuxer.cpp  AVOutput.cpp  AVPlayer.cpp  AVPlayerPrivate.cpp  AVPlayerPrivate.h  AVThread.cpp  AVThread.h  AVThread_p.h  AVTranscoder.cpp  AudioDecoder.cpp  AudioFormat.cpp  AudioFrame.cpp  AudioOutput.cpp  AudioOutputDSound.cpp  AudioOutputOpenAL.cpp  AudioOutputOpenSL.cpp  AudioOutputPortAudio.cpp  AudioOutputTypes.cpp  AudioResampler.cpp  AudioResamplerFF.cpp  AudioResamplerLibav.cpp  AudioResamplerTemplate.cpp  AudioResamplerTypes.cpp  AudioThread.cpp  AudioThread.h  CMakeLists.txt  ColorTransform.cpp  ColorTransform.h  CommonTypes.cpp  Direct2DRenderer.cpp  (+76 more)
src/QtAV/: AOOpenAL.h  AOPortAudio.h  AVClock.h  AVDecoder.h  AVDemuxThread.h  AVDemuxer.h  AVEncoder.h  AVError.h  AVInfo.h  AVInput.h  AVMuxer.h  AVOutput.h  AVPlayer.h  AVThread.h  AVTranscoder.h  AudioDecoder.h  AudioEncoder.h  AudioFormat.h  AudioFrame.h  AudioOutput.h  AudioOutputOpenAL.h  AudioOutputPortAudio.h  AudioOutputTypes.h  AudioResampler.h  AudioResamplerTypes.h  AudioThread.h  BlockingQueue.h  BlockingRing.h  ColorTransform.h  CommonTypes.h  ConvolutionShader.h  Direct2DRenderer.h  EncodeFilter.h  EventFilter.h  FactoryDefine.h  Filter.h  FilterContext.h  FilterManager.h  Frame.h  FrameReader.h  (+66 more)
src/capi/: ass_api.cpp  ass_api.h  egl_api.cpp  egl_api.h  openal_api.cpp  openal_api.h
src/codec/: AVDecoder.cpp  AVEncoder.cpp
src/compat/: msint.txt
src/cuda/: SurfaceInterop_CUDA_GL.cpp  SurfaceInterop_CUDA_GL.h  cuda_api.cpp  cuda_api.h  dynlink_cuda.h  dynlink_cuviddec.h  dynlink_nvcuvid.h  helper_cuda.h
src/directx/: D3D11VP.cpp  D3D11VP.h  DXVAHDVP.cpp  DXVAHDVP.h  SurfaceInteropD3D11.cpp  SurfaceInteropD3D11.h  SurfaceInteropD3D11EGL.cpp  SurfaceInteropD3D11GL.cpp  SurfaceInteropD3D9.cpp  SurfaceInteropD3D9.h  SurfaceInteropD3D9EGL.cpp  SurfaceInteropD3D9GL.cpp  dxcompat.h
src/filter/: EncodeFilter.cpp  Filter.cpp  FilterContext.cpp  FilterManager.cpp  FilterManager.h  GLSLFilter.cpp  LibAVFilter.cpp  SubtitleFilter.cpp  X11FilterContext.cpp
src/i18n/: QtAV.ts  QtAV_zh_CN.qm  QtAV_zh_CN.ts
src/input/: AVInput.cpp  QIODeviceInput.cpp  QIODeviceInput.h  tst_avinput.cpp  tst_avinput.pro
src/io/: AndroidIO.cpp  MediaIO.cpp  QIODeviceIO.cpp  WinRTIO.cpp  tst_avinput.pro  tst_mediaio.cpp  tst_qiodevinput.pro
widgets/: CMakeLists.txt  Direct2DRenderer.cpp  GDIRenderer.cpp  GLWidgetRenderer2.cpp  GraphicsItemRenderer.cpp  OpenGLWidgetRenderer.cpp  QOpenGLWidget.cpp  QtAVWidgets.rc  VideoPreviewWidget.cpp  VulkanRenderer.cpp  VulkanRendererPrivate.cpp  VulkanRendererPrivate.h  WidgetRenderer.cpp  X11Renderer.cpp  XVRenderer.cpp  global.cpp  libQtAVWidgets.pri  libQtAVWidgets.pro
(+901 files in other folders)
